Overlay scrollbars flush with window edge

In this patch, remove right stroke for vertical scrollbar, remove
bottom stroke for horizontal scrollbar and flip the scrollbar canvas to
remove left stroke for left vertical scrollbar.

BUG=669673

Review-Url: https://codereview.chromium.org/2763373002
Cr-Commit-Position: refs/heads/master@{#460565}

Former-commit-id: 609da81d151f9eb3bcc94852f10e4ebb649a5bed